syntax = "proto3";

option csharp_namespace = "OTPGrpc";

package OTP;

service OtpGrpcService {
	rpc GenerateOTP (GenerateOTPRequest) returns (SendEmailReply);
	rpc SendEmailPaymentSuccess (SendEmailPaymentSuccessRequest) returns (SendEmailReply);
	rpc ValidateOTP (ValidateOTPRequest) returns (ValidateOTPReply);
	rpc ResendOTP (GenerateOTPRequest) returns (SendEmailReply);
}

message GenerateOTPRequest {
    string email = 1;
}

message SendEmailPaymentSuccessRequest {
	string email = 1;
	string amount = 2;
}

message SendEmailReply {
    bool success = 1;
	string message = 2;
}

message ValidateOTPRequest {
	string email = 1;
	string otp = 2;
}

message ValidateOTPReply {
	bool IsValid = 1;
	string message = 2;
}

